@@ -1,5 +1,9 @@
 2004-02-07  Ben Elliston  <bje@wasabisystems.com>
 
+	* dejagnu.h: Conform with GNU coding standard.
+
+2004-02-07  Ben Elliston  <bje@wasabisystems.com>
+
 	* Makefile.am (PKGING): Remove.
 	(PACKAGING_METAFILES): Update accordingly.
 	(CLEANFILES, check-DEJAGNU): Remove.
